--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-*.js
-!jest.config.js
-*.d.ts
-node_modules
+cdk-exports.json
 
-# CDK asset staging directory
-.cdk.staging
-cdk.out
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
