--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.6",
-    "aws-cdk-lib": "2.77.0",
+    "aws-cdk-lib": "^2.77.0",
     "constructs": "^10.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "typescript": "~4.9.5"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "2.77.0",
+    "aws-cdk-lib": "^2.77.0",
     "constructs": "^10.0.0"
   },
   "dependencies": {
