--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "watch": "tsc -w",
     "test": "jest"
   },
-  "files": ["./lib"],
+  "files": [
+    "./lib"
+  ],
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.6",
-    "aws-cdk-lib": "^2.77.0",
+    "aws-cdk-lib": "^2.82.0",
     "constructs": "^10.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "typescript": "~4.9.5"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.77.0",
+    "aws-cdk-lib": "^2.82.0",
     "constructs": "^10.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.77.0-alpha.0"
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.82.0-alpha.0"
   }
 }
