--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.82.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "license": "Apache-2.0",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
