--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "constructs": "^10.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
-    "typescript": "~4.9.5"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "constructs": "^10.0.0"
